# agentic-os

./: .gitignore  README.md  docker-compose.voice.yml  package-lock.json
.claude/: settings.json
.cursor/skills/youtube-apis/: SKILL.md  (+2 more)
app/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/server/: fetch-vitals.ts  format.ts  vitals-history.ts  vite-vitals-plugin.ts
app/src/: App.tsx  index.css
docs/: ARCHITECTURE.md  DESIGN.md  FRONTEND.md  KNOWLEDGE_SPHERE.md  PRD.md  README.md  ROADMAP.md  VAULT_CONCEPT.md
docs/knowledge/: YOUTUBE_APIS.md
runtime/: .gitignore  main.py  pyproject.toml
runtime/db/: schema.sql
runtime/db/migrations/: 0002_semantic.sql  0003_procedural.sql  0004_dirty.sql  0005_reflection.sql
runtime/memory/: context_builder.py  conversation.py  embedder.py  episodic.py  idle.py  jobs.py  llm.py  obsidian_client.py  obsidian_config.py  orchestrator.py  procedural.py  reflection.py  retention.py  semantic.py  sync.py
runtime/models/: memory.py  tools.py
runtime/tests/: test_browser_tools.py  test_conversation.py  test_episodic.py  test_idle_jobs.py  test_mcp_bridge.py  test_obsidian_integration.py  test_procedural.py  test_pure.py  test_reflection.py  test_tool_events.py  test_tools_t0.py  test_tools_t1.py  test_tools_t2.py
runtime/tools/: approvals.py  events.py  executor.py  loop.py  mcp_config.py  permissions.py  registry.py  router.py  schemas.py
runtime/tools/handlers/: browser.py  docker.py  filesystem.py  git.py  mcp_bridge.py  memory_tools.py  terminal.py  vitals.py
(+58 files in other folders)
